--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -147,7 +147,7 @@
     <ClInclude Include="QbertCurseComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DiscComponent.h">
+    <ClInclude Include="DiskComponent.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="LevelManagerComponent.h">
@@ -266,7 +266,7 @@
     <ClCompile Include="QbertCurseComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="DiscComponent.cpp">
+    <ClCompile Include="DiskComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="LevelManagerComponent.cpp">
